refactor: inserted tests in a new nest for chooseCardTests